[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-cartpole"
version = "0.1.0"
description = "Simple cartpole example"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
# Import relevant gym packages before running mjlab train and play
mjlab_train = "mjlab_cartpole.scripts.train:main"
mjlab_play = "mjlab_cartpole.scripts.play:main"

[tool.ruff]
src = ["src"]  # Helpful for recognizing first-party imports.
indent-width = 2
exclude = [
  "src/mjlab/third_party",
  "typings",
]