[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-cartpole"
version = "0.1.0"
description = "Simple cartpole example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mjlab"]

[project.entry-points."mjlab.tasks"]
mjlab_cartpole = "mjlab_cartpole.tasks"

[tool.ruff]
src = ["src"]
indent-width = 2

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "be706226f04d2e40d83879e153c8120a56aef80f" }
